assets/stylesheets/_iphone.scss
.iphone-cover {
    padding: 0;
    height: 140px;
    overflow: hidden !important;

    .header-serif h1 {
        font-size: 32px;
    }

    .title {
        text-align: left;
    }

    .header-sans-serif h1 {
        font-size: 44px;
    }
}

$padding-text: 15px;

.article-body {
    position: relative;
    padding: 0;

    > *,
    .alf-region > * {
        box-sizing: border-box;
        margin-left: auto;
        margin-right: auto;
        max-width: $article-max-width + $padding-text;
        padding-left: $padding-text;
        padding-right: $padding-text;
    }

    .article-body-inner {
        position: relative;
    }

    .alf-region {
        padding: 0;
        max-width: none;
    }

    .full-width {
        padding: 0;
    }
}

.panorama {
    padding: 0;
    max-width: none !important;

    .media-element {
        margin: 0 !important;
        padding: 0 !important;
        max-width: none !important;
        float: none !important;
    }
}

.article-max-width {
    margin: 0 auto;
    max-width: $article-max-width;
}

.iphone {
    .media-element {
        display: block;
    }

    &.tmpl-overlay {
        .white-background, .black-background {
            padding-bottom: 15px;
        }

        .top-image {
            max-height: 950px;
        }
    }

    .title {
        padding: 20px $padding-text 15px $padding-text;
        margin-top: 0;
        margin-bottom: 0;

        h1 {
            margin: 0;
            padding: 0;
        }
    }

    .alf-region-flexible {
        h3 {
            margin-bottom: 5px;
        }
    }

    .title {
        // Done to reset the size of parent since titles will be using ems
        font-size: 10px;

        // Fix to make sure the line-height follow the font-size
        span[style*="font-size"] {
            display: inline-block;
            line-height: 1em;
        }
    }

    .byline {
        padding: 8px $padding-text;
        margin: 15px auto 10px auto;
    }

    .top-image-wrapper,
    .alf-container.top-image {
        margin: 0;
        padding: 0;
        overflow: hidden;
        max-width: 980px;
        margin-left: auto !important;
        margin-right: auto !important;

        &.panorama-wrapper {
            max-width: none;
        }
    }

    .media-element {
        -webkit-box-orient:vertical;
        max-height: inherit;
    }

    .alf-supports-fullscreen {
        .media-element {
            position: relative;
            cursor: pointer;
        }
    }

    .alf-supports-fullscreen {
        .media-element:after {
            position: absolute;
            pointer-events: none;
            content: '';
            top: 0;
            right: 0;
            width: 27px;
            height: 27px;
            background-color: rgba(0, 0, 0, 0.4);
            background-size: 13px;
            background-repeat: no-repeat;
            background-position: center;
            background-image: url("http://static.vg.no/vgpluss/gfx/icon-fullsize.png");
            display: block;
        }
    }

    .alf-supports-fullscreen img {
        width: 100%;
        height: auto;
    }

    h1 {
        margin: 0 0 20px 0;
    }

    .header-sans-serif h1 {
        font-size: 4em;
        line-height: 1em;
    }

    .header-serif h1 {
        font-size: 4em;
        line-height: 1em;
    }

    .excerpt {
        font-size: 20px;
        margin-top: 20px;

        p {
            margin: 0 0 20px 0;
        }
    }

    .byline {
        margin-top: 0;
        margin-bottom: 20px;
    }

    .overlay-caption {
        padding: 10px;
        background-color: #FFF;
        border-bottom: 1px solid #D1D1D1;
        font-size: 14px;
        font-family: $font-main-sans;
        font-style: $font-main-sans-style;
        font-weight: $font-main-sans-weight;
        color: #2b2b2b;
        box-shadow: none;
        text-shadow: none;
        position: static;
        top: auto;
        left: auto;
        right: auto;
        bottom: auto;
    }

    .alf-supports-fullscreen img {
        box-shadow: none;
    }

    .no-android {
        position: absolute;
        width: 256px;
        height: 55px;
        top: 10px;
        right: 0;
        left: 0;
        margin: 0 auto;
        background: url('//static.vg.no/vgpluss/gfx/android_no.png') no-repeat center center;
        background-size: 256px 55px;
    }

    .article-feature-header {
        position: relative;
        background: transparent;

        .title {
            color: #FFF;
        }
    }

    .author-image {
        max-width: 150px;
        float: right;
        padding-left: 10px;
        padding-bottom: 10px;
    }

    &.tmpl-comment .excerpt:before {
        content: "Kommentar";
        font-size: 16px;
        font-family: "Open Sans";
        font-weight: 400;
        color: #888;
    }
}

.alf-lt600 {
    .article-feature-header {
        background: #000;

        .title {
            -webkit-transform: none !important;
            transform: none !important;
        }

        .excerpt {
            background: $main-bgcolor;
        }
    }
}

.alf-gt600 {
    .article-feature-header {
        .title {
            position: absolute;
            top: 20px;
        }

        .excerpt {
            position: absolute;
            bottom: 0;
            text-shadow: 0 0 2px #000;
            color: #FFF;
        }

    }
}

.iphone-cover {
    .title {
        font-size: 10px;
    }
}

.tmpl-iphone-cover-no-media .title {
    margin-top: 35px;
}

.alf-container-inline {
    margin-bottom: 24px;
}

.alf-gt600 {
    .alf-container-inline {
        .dp-plugin-element {
            clear: both;
        }

        .dp-float-left,
        .dp-float-right {
            float: right;
            margin-left: 20px;

            &.media-element {
                max-width: 320px;
                margin-right: 15px;
            }
        }
    }
}

.alf-gt400.iphone .title {
    font-size: 12px;
}

.alf-gt500.iphone .title {
    font-size: 13.5px;
}

.alf-gt600.iphone .title {
    font-size: 15px;
}

.alf-gt700.iphone .title {
    font-size: 16.5px;
}

.alf-gt800.iphone .title {
    font-size: 18px;
}

.alf-gt900.iphone .title {
    font-size: 20px;
}

